--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.1",
   "devDependencies": {
-    "@types/node": "^22.14.1",
     "@types/cors": "^2.8.17",
+    "@types/node": "^22.14.1",
     "prisma": "^6.6.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
-    "socket.io": "^4.7.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "socket.io": "^4.7.5",
+    "zod": "^4.1.11"
   }
 }
